code smell
adding prints and comments